# Django

./: readme.md
Django-base/: pyproject.toml
Django-base/boards/: models.py
Django-base/boards/migrations/: 0001_initial.py
Django-base/config/: settings.py
Django-base/feeds/: urls.py
Django-base/users/migrations/: 0001_initial.py
Django-restapi/: db.sqlite3  pyproject.toml
Django-restapi/boards/: admin.py
Django-restapi/boards/migrations/: 0001_initial.py  0002_initial.py
Django-restapi/config/: settings.py  urls.py
Django-restapi/feeds/: views.py
Django-restapi/users/: models.py
Django-restapi/users/migrations/: 0001_initial.py
