[tool.poetry]
name = "django-restapi"
version = "0.1.0"
description = ""
authors = ["Yongdae92 <dydals0415@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
